# xpano

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  asan.cmake  asan.md  asan_zi.cmake  changelog.md  index.html  package.sh  privacy.html
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-scripts.yml  clang-format-check.yml  clang-tidy-check.yml  github-pages.yml  jekyll.yml  macos.yml  test.yml  ubuntu.yml  windows.yml
assets/css/: style.css.map
debian/: README.Debian  changelog.in  control  copyright
misc/cmake/: utils.cmake
misc/debuggers/: all.natvis  opencv_imgui.natvis  vec.natvis
misc/install/: build-ubuntu-22.04.sh  build-windows-latest.ps1
misc/mappings/: iwyu_nix.imp  iwyu_win.imp
misc/scripts/: clean_includes.ps1  download-submodules.sh  format.bat  format.ps1  format.sh  gen_installer.bat  generate_build_scripts.bat  generate_build_scripts.sh  iwyu.bat  iwyu.ps1  natvis_join.bat  tidy.bat  tidy.ps1  tidy.sh
misc/scripts/python/: check_fixes.py  translate_github_action.py
misc/site/: Gemfile  _config.yml  index.md  privacy.md
tests/: CMakeLists.txt  args_test.cc  auto_crop_test.cc  disjoint_set_test.cc  rect_test.cc  serialize_test.cc  stitcher_pipeline_test.cc  stitcher_test.cc  utils.h  vec_test.cc
tests/data/: 16bit.tif  8bit.tif
xpano/: algorithm.cc  algorithm.h  constants.h  file_dialog.cc  file_dialog.h  image.cc  image.h  layout.cc  layout.h  logger.cc  main.cc  pano_gui.cc  pano_gui.h  preview_pane.cc  preview_pane.h  stitcher_pipeline.cc  stitcher_pipeline.h  thumbnail_pane.cc  thumbnail_pane.h  version.h  version_fmt.h
xpano/algorithm/: algorithm.cc  algorithm.h  auto_crop.cc  auto_crop.h  blenders.cc  blenders.h  bundle_adjuster.cc  bundle_adjuster.h  image.cc  image.h  multiblend.cc  multiblend.h  options.cc  options.h  progress.cc  progress.h  stitcher.cc  stitcher.h  stitcher_pipeline.cc  stitcher_pipeline.h  warpers.h
xpano/cli/: args.cc  args.h  pano_cli.cc  pano_cli.h  signal.cc  signal.h  windows_console.cc  windows_console.h
xpano/gui/: action.h  coord.h  file_dialog.cc  file_dialog.h  layout.cc  layout.h  pano_gui.cc  pano_gui.h  preview_pane.cc  preview_pane.h  shortcut.cc  shortcut.h  thumbnail_pane.cc  thumbnail_pane.h
xpano/gui/backends/: base.cc  base.h  sdl.cc  sdl.h
xpano/gui/panels/: about.cc  about.h  bugreport_pane.cc  bugreport_pane.h  log_pane.cc  log_pane.h  preview_pane.cc  preview_pane.h  sidebar.cc  sidebar.h  thumbnail_pane.cc  thumbnail_pane.h  warning_pane.cc  warning_pane.h
xpano/gui/widgets/: drag.cc  drag.h  rotate.cc  rotate.h  widgets.cc  widgets.h
xpano/log/: logger.cc  logger.h
xpano/pipeline/: options.cc  options.h  stitcher_pipeline.cc  stitcher_pipeline.h
xpano/utils/: common.h  config.cc  config.h  disjoint_set.cc  disjoint_set.h  exiv2.cc  exiv2.h  expected.h  fmt.h  future.h  imgui_.cc  imgui_.h  opencv.cc  opencv.h  path.cc  path.h  rect.h  resource.cc  resource.h  sdl_.cc  sdl_.h  serialize.h  text.cc  text.h  threadpool.h  vec.h  vec_converters.h  vec_opencv.h
